Updated ems files

--- a/ems/views/footer.ejs
+++ b/ems/views/footer.ejs
@@ -1,5 +1,17 @@
+<!--/*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS ejs footer page
+;===========================================
+*/
+-->
+
 <hr>
 
 <footer>
-    <p>Maxwell 2018</p>
+    <p>Created by, &copy Leon Maxwell 2018</p>
 </footer>
