--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -1,1 +1,57 @@
+<!--/*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS ejs list page
+;===========================================
+*/
+-->
+
 <!-- This will have a tabular view of the employees table -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<% include header %>
+
+<body>
+
+<% include navbar %>
+
+<div role="main" class="container" style="width: 50%;">
+    <br/><br/>
+
+    <% if (employee.length) { %>
+    <h2>-- Employee Listing --</h2><br />
+    <a href="/new">Add New</a>
+    <table class="table table-hover">
+        <thead class="thead-dark">
+        <tr>
+            <th>Name</th>
+            <th>Position</th>
+        </tr>
+        </thead>
+        <tbody>
+        <% employee.forEach(function (entry, position) { %>
+        <tr>
+            <td><%= entry.name %></td>
+            <td><a href="/view/<%= entry.name %>">VIEW</a></td>
+            <td><%= entry.position %></td>
+            <td><a href="/view/<%= entry.position %>">VIEW</a></td>
+        </tr>
+        </tbody>
+        <% }) %>
+    </table>
+    <% } else { %>
+    No entries! <a href="/new">Add one!</a>
+    <% } %>
+
+    <br/>
+</div>
+<% include scripts %>
+
+</body>
+</html>
