--- a/ems/views/scripts.ejs
+++ b/ems/views/scripts.ejs
@@ -1,1 +1,17 @@
+<!--/*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS script includes
+;===========================================
+*/
+-->
+
 <!-- Scripts will appear below -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+<script src="//cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
