--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -1,3 +1,15 @@
+<!--/*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS Index file to render main page
+;===========================================
+*/
+-->
+
 <!-- This is the landing page -->
 <!-- Include the header, navbar, footer, and scripts ejs files -->
 <!DOCTYPE html>
@@ -12,42 +24,36 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-2">Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a
-            jumbotron and three supporting pieces of content. Use it as a starting point to create something more
-            unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <h1 class="display-2">Welcome to INITECH!</h1>
+        <p>Would you like to come work for us?</p>
+        <p><a class="btn btn-primary btn-lg" href="/list.ejs" role="button">View Current Employees &raquo;</a></p>
     </div>
 </div>
-
 <div class="container">
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h2>Employees</h2>
+            <p>View details here.</p>
+            <p><a class="btn btn-secondary" href="/views.ejs" role="button">See Current Employees &raquo;</a></p>
         </div>
         <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h2>Add Employee</h2>
+            <p>View other details here.</p>
+            <p><a class="btn btn-secondary" href="/new.ejs" role="button">Add an Employee &raquo;</a></p>
         </div>
-        <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div>
+       
+    </div>
+    <div>
+        <% include new %>
     </div>
 
+    
     <% include footer %>
+
 </div>
+
+
 
 <% include scripts %>
 
