--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -1,13 +1,25 @@
+<!--/*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS ejs navigation page
+;===========================================
+*/
+-->
+
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.ejs">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="./views.ejs">Employee List</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="./list.ejs">Contact Us</a>
             </li>
         </ul>
     </nav>
