--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -1,1 +1,39 @@
+<!-- /*
+============================================
+; Title:  Program Header
+; Author: Professor Krasso 
+; Date:   11 December 2017
+; Modified By: Leon Maxwell
+; Modified date: 09 September 2018
+; Description: EMS ejs new page
+;===========================================
+*/
+-->
+
 <!-- This is going to be the data entry page -->
+
+<div role="main" class="container" style="width: 50%;">
+    <br/><br/>
+
+    <h2>-- Employee Entry Page --</h2>
+    <form method="post" action="/process">
+        <div class="form-group">
+            <label for="txtName">Name:</label>
+            <input type="text" class="form-control" id="txtName" name="txtName" />
+            <label for="txtName">Position:</label>
+            <input type="text" class="form-control" id="txtName" name="txtName" />
+        </div>
+
+        <div class="form-group">
+            <!-- CSRF token -->
+            <input name="_csrf" value="<%= csrfToken %>" type="hidden">
+
+            <button type="submit" class="btn btn-primary float-right">Submit</button>
+        </div>
+    </form>
+
+    <br /><br />
+
+    <a href="/list">Return to Employees</a>
+</div>
+
