--- a/ems/views/views.ejs
+++ b/ems/views/views.ejs
@@ -1,1 +1,30 @@
 <!-- This is a read-only page with selected employee details -->
+<!DOCTYPE html>
+<html lang="en">
+
+<% include header %>
+
+<body>
+
+<% include navbar %>
+
+<div role="main" class="container" style="width: 50%;">
+    <br/><br/>
+
+    <h2>-- Employee Record --</h2>
+    <div>
+        <div class="form-group">
+            <label for="txtName">Name:</label>
+            <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].name %>" name="txtName" />
+        </div>
+    </div>
+
+    <br /><br />
+
+    <a href="/list">Return to Employees</a>
+</div>
+
+<% include scripts %>
+
+</body>
+</html>
