--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -13,14 +13,14 @@
 <!-- This is going to be the data entry page -->
 
 <div role="main" class="container" style="width: 50%;">
-    <br/><br/>
+    <br /><br />
 
     <h2>-- Employee Entry Page --</h2>
     <form method="post" action="/process">
         <div class="form-group">
-            <label for="txtName">Name:</label>
+            <label for="txtName">First Name:</label>
             <input type="text" class="form-control" id="txtName" name="txtName" />
-            <label for="txtName">Position:</label>
+            <label for="txtName">Last Name:</label>
             <input type="text" class="form-control" id="txtName" name="txtName" />
         </div>
 
@@ -36,4 +36,3 @@
 
     <a href="/list">Return to Employees</a>
 </div>
-
