--- a/ems/views/views.ejs
+++ b/ems/views/views.ejs
@@ -6,25 +6,29 @@
 
 <body>
 
-<% include navbar %>
+    <% include navbar %>
 
-<div role="main" class="container" style="width: 50%;">
-    <br/><br/>
+    <div role="main" class="container" style="width: 100%;">
+        <br /><br />
 
-    <h2>-- Employee Record --</h2>
-    <div>
-        <div class="form-group">
-            <label for="txtName">Name:</label>
-            <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].name %>" name="txtName" />
+        <h2>-- Employee Record --</h2>
+        <div>
+            <div class="form-group">
+                <label for="txtName">First Name:</label>
+                <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].firstName %>" name="firstName" />
+
+                <label for="txtName">Last Name:</label>
+                <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].lastName %>" name="lastName" />
+
+            </div>
+
+            <br /><br />
+
+            <a href="/list">Return to Employees</a>
         </div>
-    </div>
 
-    <br /><br />
-
-    <a href="/list">Return to Employees</a>
-</div>
-
-<% include scripts %>
+        <% include scripts %>
 
 </body>
+
 </html>
