--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -18,10 +18,10 @@
     <h2>-- Employee Entry Page --</h2>
     <form method="post" action="/process">
         <div class="form-group">
-            <label for="txtName">First Name:</label>
-            <input type="text" class="form-control" id="txtName" name="txtName" />
-            <label for="txtName">Last Name:</label>
-            <input type="text" class="form-control" id="txtName" name="txtName" />
+            <label for="firstName">First Name:</label>
+            <input type="text" class="form-control" id="firstName" name="txtName" />
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="form-control" id="lastName" name="txtName" />
         </div>
 
         <div class="form-group">
