--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -4,7 +4,7 @@
 ; Author: Professor Krasso 
 ; Date:   11 December 2017
 ; Modified By: Leon Maxwell
-; Modified date: 09 September 2018
+; Modified date: 28 September 2018
 ; Description: EMS ejs navigation page
 ;===========================================
 */
@@ -13,13 +13,13 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="index.ejs">Home</a>
+                <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./views.ejs">Employee List</a>
+                <a class="nav-link" href="new">Add an Employee</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./list.ejs">Contact Us</a>
+                <a class="nav-link" href="list">View list of employees</a>
             </li>
         </ul>
     </nav>
