--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -4,7 +4,7 @@
 ; Author: Professor Krasso 
 ; Date:   11 December 2017
 ; Modified By: Leon Maxwell
-; Modified date: 09 September 2018
+; Modified date: 28 September 2018
 ; Description: EMS ejs new page
 ;===========================================
 */
@@ -12,16 +12,17 @@
 
 <!-- This is going to be the data entry page -->
 
+<% include header %>
+<% include navbar %>
+
 <div role="main" class="container" style="width: 50%;">
     <br /><br />
 
     <h2>-- Employee Entry Page --</h2>
     <form method="post" action="/process">
         <div class="form-group">
-            <label for="firstName">First Name:</label>
-            <input type="text" class="form-control" id="firstName" name="txtName" />
-            <label for="lastName">Last Name:</label>
-            <input type="text" class="form-control" id="lastName" name="txtName" />
+            <label for="txtName">Name:</label>
+            <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Last, First" />            
         </div>
 
         <div class="form-group">
@@ -36,3 +37,6 @@
 
     <a href="/list">Return to Employees</a>
 </div>
+
+<% include footer %>
+%< include scripts %>
