--- a/ems/views/navbar.ejs
+++ b/ems/views/navbar.ejs
@@ -11,15 +11,15 @@
 -->
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="index.ejs">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./views.ejs">Employee List</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./list.ejs">Contact Us</a>
-            </li>
-        </ul>
-    </nav>
+    <ul class="navbar-nav">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="new">Add an Employee</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="list">List of Employees</a>
+        </li>
+    </ul>
+</nav>
