--- a/ems/views/index.ejs
+++ b/ems/views/index.ejs
@@ -19,23 +19,23 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
     <div class="container">
-        <h1 class="display-2">Welcome to INITECH!</h1>
-        <p>Would you like to come work for us?</p>
-        <p><a class="btn btn-primary btn-lg" href="/list.ejs" role="button">View Current Employees &raquo;</a></p>
+        <h1 class="display-5">Welcome to the INITECH Employee Management Portal!</h1>
+        <p>This is where you can manage all employee records.</p>
+        <!-- <p><a class="btn btn-primary btn-lg" href="list" role="button">View Current Employees &raquo;</a></p> -->
     </div>
 </div>
 <div class="container">
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-4">
-            <h2>Employees</h2>
-            <p>View details here.</p>
-            <p><a class="btn btn-secondary" href="views.ejs" role="button">See Current Employees &raquo;</a></p>
+            <h2>View Employees</h2>
+            <p>See a list of current employees.</p>
+            <p><a class="btn btn-secondary" href="list" role="button">See Current Employees &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Add Employee</h2>
-            <p>View other details here.</p>
-            <p><a class="btn btn-secondary" href="new.ejs" role="button">Add an Employee &raquo;</a></p>
+            <p>Add a new employee here.</p>
+            <p><a class="btn btn-secondary" href="new" role="button">Add an Employee &raquo;</a></p>
         </div>
 
     </div>
