--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -12,46 +12,44 @@
 
 <!-- This will have a tabular view of the employees table -->
 
-<!DOCTYPE html>
-<html lang="en">
-
 <% include header %>
+<% include navbar %>
 
-<body>
+<div role="main" class="container" style="width: 50%;">
+    <br /><br />
 
-    <% include navbar %>
+    <% if (employees.length) { %>
+    <h2>List of Current Employees:</h2>
 
-    <div role="main" class="container" style="width: 50%;">
-        <br /><br />
+    <br /><br />
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th>Name</th>
+                <th>View</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% employees.forEach(function (employee) { %>
+            <tr>
+                <td>
+                    <%= employee.name %>
+                </td>
+                <td><a href="/view/<%= employee.name %>"></a>view</td>
+            </tr>
+        </tbody>
+        <% }) %>
+    </table>
+    <br />
 
-        <% if (employees.length) { %>
-        <h2>-- Employee Listing --</h2><br />
-        <a href="/new">Add New</a>
-        <br /><br />
-        <table class="table table-hover">
-            <thead class="thead-dark">
-                <tr>
-                    <th>First Name</th>
-                    <th>Last Name</th>
-                </tr>
-            </thead>
-            <tbody>
-                <% employees.forEach(function (employee) { %>
-                <tr>
-                    <td>
-                        <%= employee.name %>
-                    </td>
-                    <td><a href="/view/<%= employee.name %>"></a>view</td>
-                </tr>
-            </tbody>
-            <% }) %>
-        </table>
-        <% } else { %>
-        No entries! <a href="new">Add a new employee</a>
-        <% } %>
+    <a class="btn btn-secondary float-right" href="new" role="button">Add New</a>
 
-        <br />
-    </div>
-    <% include footer %>
-</body>
+    <% } else { %>
+    No entries! <a class="btn btn-secondary" href="new" role="button">Add a New Employee &raquo;</a>
+    <% } %>
+
+    <br /><br />
+</div>
+
+<% include footer %>
 <% include scripts %>
