--- a/ems/views/new.ejs
+++ b/ems/views/new.ejs
@@ -21,8 +21,8 @@
     <h2>-- Employee Entry Page --</h2>
     <form method="post" action="/process">
         <div class="form-group">
-            <label for="txtName">Name:</label>
-            <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Last, First" />            
+            <label for="txtName">Employee Name:</label>
+            <input type="text" class="form-control" id="txtName" name="txtName" placeholder="Last, First" />
         </div>
 
         <div class="form-group">
@@ -35,8 +35,8 @@
 
     <br /><br />
 
-    <a href="/list">Return to Employees</a>
+    <a class="btn btn-secondary" href="list" role="button">Return to Employees</a>
 </div>
 
 <% include footer %>
-%< include scripts %>
+<% include scripts %>
