--- a/ems/views/views.ejs
+++ b/ems/views/views.ejs
@@ -3,21 +3,22 @@
 <% include header %>
 <% include navbar %>
 
-    <div role="main" class="container" style="width: 50%;">
-        <br /><br />
+<div role="main" class="container" style="width: 50%;">
+    <br /><br />
 
-        <h2>-- Employee Record --</h2>
-        <div>
-            <div class="form-group">
-                <label for="txtName">Name:</label>
-                <input type="text" class="form-control" id="txtName" readonly value="<%= employees[0].name %>" name="txtName" />
+    <h2>-- Employee Record --</h2>
+    <div>
+        <div class="form-group">
+            <label for="txtName">Name:</label>
+            <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].name %>" name="txtName" />
 
-            </div>
-
-            <br /><br />
-
-            <a href="list">Return to Employees</a>
         </div>
 
-<% include footer %>
-<% include scripts %>
+        <br /><br />
+
+        <a class="btn btn-secondary" href="list" role="button">Return to Employees</a>
+
+    </div>
+
+    <% include footer %>
+    <% include scripts %>
