--- a/ems/views/list.ejs
+++ b/ems/views/list.ejs
@@ -26,7 +26,7 @@
         <thead class="thead-dark">
             <tr>
                 <th>Name</th>
-                <th>View</th>
+                <th>View Employee</th>
             </tr>
         </thead>
         <tbody>
@@ -35,7 +35,7 @@
                 <td>
                     <%= employee.name %>
                 </td>
-                <td><a href="/view/<%= employee.name %>"></a>view</td>
+                <td><a href="/view/<%= employee.name %>"></a>Click to view</td>
             </tr>
         </tbody>
         <% }) %>
