--- a/ems/views/view.ejs
+++ b/ems/views/view.ejs
@@ -10,7 +10,7 @@
     <div>
         <div class="form-group">
             <label for="txtName">Name:</label>
-            <input type="text" class="form-control" id="txtName" readonly value="<%= employee[0].name %>" name="txtName" />
+            <input type="text" class="form-control" id="txtName" value="<%= employee[0].name %>" name="txtName" />
 
         </div>
 
